--- a/download.html
+++ b/download.html
@@ -25,6 +25,10 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+    ></script>
     <!--Embed-->
   </head>
 
@@ -75,11 +79,50 @@
     </section>
 
     <section class="main">
-        <div class="container">
-          <div class="box">
-            
-          </div>
+      <div class="container">
+        <div class="title">
+          <ul class="texts">
+            <li class="list">
+              <span class="text">Increase <span class="FPS">FPS</span></span>
+            </li>
+            <li class="list">
+              <span class="text"
+                >Reduce <span class="lag">input lag</span></span
+              >
+            </li>
+            <li class="list">
+              <span class="text"
+                >Improve <span class="network">network</span></span
+              >
+            </li>
+            <li class="list">
+              <span class="text"
+                >Download <span class="network">EchoX</span> now.</span
+              >
+            </li>
+          </ul>
         </div>
+        <div class="wrapper">
+          <a href="#" class="button"
+            ><i class="fas fa-cloud-download-alt"></i> Download</a
+          >
+        </div>
+        <button class="modal-open">Older versions</button>
+        <div class="modal-box">
+          <div class="modal-box-content">
+            <ul>
+              <li><a href="#">N/A</a></li>
+              <li><a href="#">N/A</a></li>
+              <li><a href="#">N/A</a></li>
+              <li><a href="#">N/A</a></li>
+              <li><a href="#">N/A</a></li>
+            </ul>
+          </div>
+          <button class="modal-close">
+            <span class="visuallyhidden">Close modal box</span>
+          </button>
+        </div>
+      </div>
     </section>
     <script>
       const navbar = document.querySelector(".navbar");
@@ -103,6 +146,51 @@
           );
           img.setAttribute("src", "assets/imgs/kBYQ0280.png");
         }
+      });
+
+      var $trigger = $(".modal-open");
+      var $close = $(".modal-close");
+      var $modal = $(".modal-box");
+
+      $(window)
+        .on("resize", function () {
+          var top = $trigger.offset().top + $trigger.outerHeight();
+          var left = $trigger.offset().left;
+          var width = $trigger.outerWidth();
+          $trigger.attr({
+            "data-top": top,
+            "data-left": left,
+            "data-width": width,
+          });
+          $modal.css({
+            top: top,
+            left: left,
+          });
+        })
+        .trigger("resize");
+
+      $trigger.on("click", function () {
+        $modal
+          .css({
+            top: "50%",
+            left: "50%",
+            width: "50%",
+            height: "85%",
+          })
+          .addClass("is-open");
+      });
+
+      $close.on("click", function () {
+        var top = $trigger.offset().top + $trigger.outerHeight();
+        var left = $trigger.offset().left;
+        $modal
+          .css({
+            top: top,
+            left: left,
+            width: 0,
+            height: "2px",
+          })
+          .removeClass("is-open");
       });
     </script>
   </body>
